[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/DialogueUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/Interactables/IMG_4954.png" type="Texture" id=2]
[ext_resource path="res://scripts/Interactable.gd" type="Script" id=3]
[ext_resource path="res://resources/Urn.tres" type="Resource" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 107, 39 )

[node name="Urn" type="KinematicBody2D"]
script = ExtResource( 3 )
data = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 77, 128 )
shape = SubResource( 1 )

[node name="ShowDialogueTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 79.1, 119.3 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="Dialogue" type="Node2D" parent="."]
z_index = 4

[node name="DialogueUI" parent="Dialogue" instance=ExtResource( 1 )]
margin_left = 120.0
margin_top = -49.0
margin_right = 284.0
margin_bottom = -49.0

[connection signal="timeout" from="ShowDialogueTimer" to="." method="_on_ShowDialogueTimer_timeout"]
